// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`shebang.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
#!/usr/bin/env node
function a() {}

=====================================output=====================================
#!/usr/bin/env node
function a() {}

================================================================================
`;

exports[`shebang-newline.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
#!/usr/bin/env node

function a() {}

=====================================output=====================================
#!/usr/bin/env node

function a() {}

================================================================================
`;

exports[`snippet: Empty file with shebang format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
#!/usr/bin/env node
=====================================output=====================================
#!/usr/bin/env node

================================================================================
`;

exports[`snippet: Empty file with shebang format 2`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
#!/usr/bin/env node

=====================================output=====================================
#!/usr/bin/env node

================================================================================
`;

exports[`snippet: Multiline shebang shell shim format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
#!/bin/sh
":" //; exec /usr/bin/env ts-node --transpile-only "$0" "$@"
const ten = 10;

=====================================output=====================================
#!/bin/sh
":" //; exec /usr/bin/env ts-node --transpile-only "$0" "$@"
const ten = 10;

================================================================================
`;

exports[`snippet: Multiline shebang shell shim with ASI protection format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
#!/bin/sh
":" //; exec /usr/bin/env ts-node --transpile-only "$0" "$@"
;(() => console.log(1))();

=====================================output=====================================
#!/bin/sh
":" //; exec /usr/bin/env ts-node --transpile-only "$0" "$@"
;(() => console.log(1))();

================================================================================
`;
